--- a/manifest.json
+++ b/manifest.json
@@ -37,6 +37,7 @@
         "tabs",
         "*://*/*",
         "storage",
-        "unlimitedStorage"
+        "unlimitedStorage",
+        "fontSettings"
     ]
 }
